# TorchFlare

./: README.md
backend/: .env  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
backend/migrations/: env.py
frontend/: index.html
pytorch-frontend/: app.js  index.html  package-lock.json  package.json
pytorch-frontend/src/: App.vue
