[project]
name = "pytorch-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.15.2",
    "beautifulsoup4==4.13.1",
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "chess==1.11.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "farama-notifications==0.0.4",
    "filelock==3.17.0",
    "flask==3.1.0",
    "flask-cors==3.0.10",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "fonttools==4.55.8",
    "fsspec==2024.12.0",
    "greenlet==3.2.0",
    "gymnasium==1.0.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "kiwisolver==1.4.8",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.2",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pygame==2.6.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "requests==2.32.3",
    "setuptools==75.8.0",
    "six==1.17.0",
    "soupsieve==2.6",
    "sqlalchemy==2.0.40",
    "stable-baselines3==2.5.0",
    "sympy==1.13.1",
    "torch==2.6.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
]
